--- a/fileDiffer.html
+++ b/fileDiffer.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>File Drop with Brython</title>
+    <title>OpenFileDiff Web Converter</title>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/brython@3.13.0/brython.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/brython@3.13.0/brython_stdlib.js"></script>
     <style>
@@ -53,7 +53,7 @@
         .codeBrown { color:rgb(206, 145, 120); }
     </style>
 </head>
-<body onload="brython()">
+<body onload="brython()" style="max-width: 900px; margin-left: auto; margin-right: auto;">
     <h1 class="title">OpenFileDiff web converter</h1>
     <div>
         <p class="regular">OpenFileDiff is a fileformat </p>
