--- a/openFileDiff.html
+++ b/openFileDiff.html
@@ -153,7 +153,7 @@ Todo:
 <div style="white-space:nowrap; display: flex; flex-direction: row; border-radius: 5px; border:solid; border-bottom:0px;border-inline  :0px;border-width: 2px; border-color:var(--weak-tint); width: auto; height:fit-content; padding:0px; padding-top:10px; margin:0px; margin-inline:10px; margin-top: 5px;">
     <p style="text-align: left; width:52%; display: inline-block;" class="tinyText">Written by Olliver Aira (@ItsCubeTime) 12/21/2024</p>
     <div style="width: auto; display:block;"></div>
-    <p style="color: var(--svg-color); width:100px;text-align: center; align-self: center;text-wrap:nowrap;" class="regular">⬩—❖—⬩</p>  
+    <p style="color: var(--svg-color); width:100px;text-align: center; align-self: center;text-wrap:nowrap; overflow-wrap:normal;" class="regular">⬩—❖—⬩</p>  
     <div style="width: auto; display:block;"></div>
     <p style="text-align: right; width:45%; display: inline-block;" class="link tinyText" onclick=" window.open( `https://github.com/ItsCubeTime/openfilediff`, `_blank`);">https://github.com/ItsCubeTime/openfilediff</p>
 </div>
