--- a/openFileDiff.html
+++ b/openFileDiff.html
@@ -146,6 +146,9 @@ Example usage:</p>
 <span class="codeYellow">print</span>(<span class="codeYellow">len</span>(<span class="codeLightBlue">diff</span>))<span class="codeDarkGreen"># Would print: 14</span>
 <span class="codeYellow">print</span>(<span class="codeLightBlue">b2</span>==<span class="codeBlue">B2</span>) <span class="codeDarkGreen"># Will always print true, regardless of the original contents of b1 & b2</p>
 <p class="regular">
+
+Everything in this document and its associated repository (link below) is available under the permissive Apache 2.0. As such, feel free to use this dataformat & the encoder/decoder implementation as you see fit in any software for any use.
+
 Todo:
 * Benchmark with various input sizes (I suspect both the encoding & decoding algorithms are close close to O(n))
 * Format this document a bit better
